# telegramm-orders-taxi

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-base.txt  requirements-dev.txt
.github/workflows/: ci.yml
api/: Dockerfile  requirements.txt
api/app/: addresses_api.py  admin_api.py  auth_api.py  deps.py  drivers_api.py  errors.py  main.py  orders_api.py  push_api.py  routing_api.py
bot/: Dockerfile  bot.py  requirements.txt
docs/: tz.md
infra/: Caddyfile  docker-compose.server.yml  docker-compose.yml
shared/: auth_jwt.py  auth_passwords.py  config.py  drivers.py  email_send.py  openrouteservice.py  order_notify.py  redis_client.py  slots.py  telegram_init_data.py  telegram_login_widget.py  telegram_send.py  yandex_maps.py
shared/db/: base.py  engine.py  migrate.py  models.py
shared/db/migrations/: env.py
tests/: conftest.py  test_addresses_api.py  test_admin_api.py  test_admin_orders_api.py  test_api_smoke.py  test_auth_api.py  test_bot_smoke.py  test_drivers_api.py  test_orders_api.py  test_orders_transitions.py  test_routing_api.py  test_slots.py  test_telegram_auth.py  test_worker_smoke.py
webapp/: .env.example  .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
webapp/public/: telegram-test.html
webapp/src/: App.tsx  index.css  main.tsx
webapp/src/components/: AdminViewSwitcher.tsx  AppShell.tsx  DevToolbar.tsx  LogoutButton.tsx  MapAddressPicker.tsx  PhoneFrame.tsx  PullToRefresh.tsx  (+1 more)
worker/: Dockerfile  requirements.txt  worker.py
(+45 files in other folders)
